package Data;

public interface OrderDrinkBehavior {
    void produceDrink(String drink);
}
